listing api fix