@@ -13,6 +13,7 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import lombok.RequiredArgsConstructor;
@@ -33,7 +34,7 @@ public class FunnelDefinitionDao {
       .preparedQuery(FunnelDefinitionQueries.INSERT)
       .rxExecute(
         Tuple.from(
-          List.of(
+          Arrays.asList(
             row.getProjectId(),
             row.getName(),
             row.getDescription(),
@@ -57,7 +58,7 @@ public class FunnelDefinitionDao {
       .preparedQuery(FunnelDefinitionQueries.UPDATE)
       .rxExecute(
         Tuple.from(
-          List.of(
+          Arrays.asList(
             row.getName(),
             row.getDescription(),
             row.getFunnelType(),
@@ -165,10 +166,10 @@ public class FunnelDefinitionDao {
       .description(row.getString("description"))
       .funnelType(row.getString("funnel_type"))
       .stepOrderType(row.getString("step_order_type"))
-      .stepsJson(row.getString("steps_json"))
+      .stepsJson(row.getValue("steps_json") != null ? row.getValue("steps_json").toString() : null)
       .windowSeconds(row.getLong("window_seconds"))
       .mode(row.getString("mode"))
-      .filtersJson(row.getString("filters_json"))
+      .filtersJson(row.getValue("filters_json") != null ? row.getValue("filters_json").toString() : null)
       .dateRangeDays(row.getInteger("date_range"))
       .startTime(toInstant(row, "start_time"))
       .endTime(toInstant(row, "end_time"))
